update discount
