# server/controllers/discount.controller.js
@@ -1,13 +1,13 @@
-import DiscountCode from '../models/discountCode.model'
+import Discount from '../models/discount.model'
 import extend from 'lodash/extend'
 
 const create = async(req, res) =>{
-    const discountCode = new DiscountCode(req.body)
+    const discount = new Discount(req.body)
     try{
-        await discountCode.save()
+        await discount.save()
         console.info("discount is saved")
         return res.status(200).json(
-            discountCode
+          discount
         )
     }
     catch(err){
@@ -18,19 +18,19 @@ const create = async(req, res) =>{
     }
 }
 
-const discountCodeById = async (req, res, next ,id) =>{
+const discountById = async (req, res, next ,id) =>{
     try{
-        console.trace(`find discount by id: ${id}`)
+        console.info(`find discount by id: ${id}`)
 
-        let discountCode = await DiscountCode.findById(id)
-        if(!discountCode){
+        let discount= await Discount.findById(id)
+        if(!discount){
             console.error(`discount code: ${id} not found`)
             return res.status('400').json({
-              error: "discount code not found"
+              error: "discount not found"
             })    
         }
-        req.discountCode = discountCode
-        console.info(`discount code: ${id} found`)
+        req.discount = discount
+        console.info(`discount : ${id} found`)
         next()
     }
     catch(err){
@@ -42,40 +42,34 @@ const discountCodeById = async (req, res, next ,id) =>{
 }
 
 const read = (req, res) => {
-    console.info(`Read discount: ${req.discountCode.id}`)
-    return res.json(req.discountCode)
+    console.info(`Read discount: ${req.discount.id}`)
+    return res.json(req.discount)
 }
 
 const list = async (req, res) => {
     try {
       const current = parseInt(req.query.page)-1
       const pagesize = parseInt(req.query.pagesize)
-      const category = req.query.category
-      const discount = parseFloat(req.query.discount)
-      const name = req.query.name
-      const expiry = req.query.expiry
-      console.info('get list discount code')
-      let discountCodes = await DiscountCode.find().select('_id name discount category expiry')
-      discountCodes.filter(discountCode =>(
-        (category === undefined || discountCode.category.includes(category))
-        && (discount===undefined || discountCode.discount === discount)
-        && (name === undefined || discountCode.name.includes(name))
-        && (expiry === undefined || discountCode.expiry >= new Date(expiry))
-      ))
-      const total = discountCodes.length
+      console.info('get list discount')
+      let discounts = await Discount.find().select('_id percentage')
+
+      const total = discounts.length
       console.info(`total: ${total}`)
 
-      if(current*pagesize < discountCodes.length){
-        discountCodes=discountCodes.slice(current*pagesize, Math.min((current+1)*pagesize,discountCodes.length))
+      if(current*pagesize < discounts.length){
+        discounts=discounts.slice(current*pagesize, Math.min((current+1)*pagesize,discounts.length))
+      }
+      else {
+        discounts=[]
       }
   
-      console.info('get list discount code finished')
+      console.info('get list discount finished')
     
       res.json({
           page : (current+1) ,
           pagesize : pagesize,
           total: total,
-          discountCodes : discountCodes
+          discounts : discounts
       })
     } catch (err) {
       console.error(err)
@@ -87,13 +81,12 @@ const list = async (req, res) => {
 
 const update = async (req, res) => {
     try {
-      console.info(`update discountCode: ${req.discountCode.id}`)
-      let discountCode = req.discountCode
-      discountCode = extend(discountCode, req.body)
-      discountCode.updated = Date.now()
-      await discountCode.save()
-      console.info(`update discountCode: ${req.discountCode.id} finished`)
-      res.json(discountCode)
+      console.info(`update discount: ${req.discount.id}`)
+      let discount = req.discount
+      discount = extend(discount, req.body)
+      await discount.save()
+      console.info(`update discount: ${req.discount.id} finished`)
+      res.json(discount)
     } catch (err) {
       console.error(err)
       return res.status(400).json(
@@ -104,11 +97,11 @@ const update = async (req, res) => {
 
 const remove = async (req, res) => {
     try {
-      console.info(`delete discountCode:  ${req.discountCode.id}`)
-      let discountCode = req.discountCode
-      let deletedDiscountCode = await discountCode.remove()
-      console.info(`delete discountCode: ${req.discountCode.id} finished`)
-      res.json(deletedDiscountCode)
+      console.info(`delete discount:  ${req.discount.id}`)
+      let discount = req.discount
+      let deletedDiscount = await discount.remove()
+      console.info(`delete discount: ${req.discount.id} finished`)
+      res.json(deletedDiscount)
     } catch (err) {
       console.error(err)
       return res.status(400).json(
@@ -119,7 +112,7 @@ const remove = async (req, res) => {
 
 export default {
     create,
-    discountCodeById,
+    discountById,
     read,
     list,
     remove,
