# server/express.js
@@ -12,7 +12,7 @@ import authRoutes from './routes/auth.routes'
 import productRoutes from './routes/product.routes'
 import customerRoutes from './routes/customer.routes'
 import tableRoutes from './routes/table.routes'
-import discountCodeRoutes from './routes/discountCode.routes'
+import discountRoutes from './routes/discount.routes'
 const swaggerUI = require("swagger-ui-express");
 const swaggerFile = require('./swagger_output.json')
 
@@ -52,7 +52,7 @@ app.use('/',authRoutes)
 app.use('/',productRoutes)
 app.use('/',customerRoutes)
 app.use('/',tableRoutes)
-app.use('/',discountCodeRoutes)
+app.use('/',discountRoutes)
 
 app.get('/',(req,res)=>{
     res.status(200).send(template())
